platform/gitops/components/certificates/cert-manager/helm/patch-vpa-requests-deployment-cert-manager-cainjector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-cainjector
  namespace: cert-manager
spec:
  template:
    spec:
      containers:
        - name: cert-manager-cainjector
          resources:
            requests:
              cpu: "15m"
              memory: "80Mi"
            limits:
              memory: "120Mi"
