platform/gitops/components/certificates/cert-manager/helm/patch-vpa-requests-deployment-cert-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  template:
    spec:
      containers:
        - name: cert-manager-controller
          resources:
            requests:
              cpu: "15m"
              memory: "64Mi"
            limits:
              memory: "96Mi"
